# pyglass

./: .gitignore  CMakeLists.txt  format.py  param.txt  run.sh
examples/: config.json  demo.ipynb  main.cc  main.py  server.cpp
glass/: graph.hpp  neighbor.hpp  searcher.hpp
glass/nsg/: nsg.hpp
glass/quant/: fp32_quant.hpp  sq4_quant.hpp  sq8_quant.hpp
python/ann_dataset/: dataset.py
python/glassppy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
